--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -6,7 +6,8 @@
 
 .post-content {
   // scrollable for mobile devices
-  overflow-x: scroll;
+  overflow-x: hidden;
+  // overflow-x: scroll;
 }
 
 .post-content p {
