--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
   <ul class="header-main-nav">
     {% for item in site.data.menus %}
     <li class="header-main-nav-item">
-      <a href="{% if item.absoluteUrl != true %}{{ site.baseurl }}/{% endif %}{{ item.url }}">
+      <a href="{% if item.absoluteUrl != true %}{{ site.baseurl }}/{% endif %}{{ item.url }}" class = "header-a">
         {% if item.default %}
           {{site.data.lang[site.language][item.default]}}
         {% else %}
