--- a/_sass/reset.scss
+++ b/_sass/reset.scss
@@ -10,14 +10,19 @@
 html,
 body {
   height: 100%;
+  width: 100%;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
   font-family: Computer Modern, Courier New, Courier, monospace;
+
 }
 
 a {
-  text-decoration: none;
+  // text-decoration: none;
   color: #000;
+  // color: hotpink;
+
 }
 
 a:hover {
@@ -52,8 +57,8 @@ h2 {
 }
 
 hr {
-  margin: 10px;
-  border: 1px solid #eee;
+  margin: 15px;
+  color: #ff0000;
 }
 
 img {
