--- a/_sass/reset.scss
+++ b/_sass/reset.scss
@@ -17,6 +17,13 @@ body {
   font-family: Computer Modern, Courier New, Courier, monospace;
 
 }
+head{
+
+  overflow: hidden;
+}
+body{
+  overflow: initial;
+}
 
 a {
   // text-decoration: none;
