--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,3 +1,12 @@
-{% if site.disqus %}
-  {% include disqus.html %}
-{% endif %}
+<form action="https://formspree.io/f/your-form-id" method="POST">
+  <label for="name">Name:</label><br>
+  <input type="text" id="name" name="name" required><br><br>
+  
+  <label for="email">Email:</label><br>
+  <input type="email" id="email" name="email" required><br><br>
+  
+  <label for="message">Message:</label><br>
+  <textarea id="message" name="message" rows="5" required></textarea><br><br>
+  
+  <button type="submit">Send</button>
+</form>
