--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,4 +1,4 @@
-<form action="https://formspree.io/f/your-form-id" method="POST">
+<!-- <form action="https://formspree.io/f/your-form-id" method="POST">
   <label for="name">Name:</label><br>
   <input type="text" id="name" name="name" required><br><br>
   
@@ -9,4 +9,4 @@
   <textarea id="message" name="message" rows="5" required></textarea><br><br>
   
   <button type="submit">Send</button>
-</form>
+</form> -->
