--- a/_includes/posts_only.html
+++ b/_includes/posts_only.html
@@ -1,31 +1,45 @@
+<!-- <div class="filters">
+  <button class="filter-button" data-filter="all">All</button>
+  <button class="filter-button" data-filter="posts">Posts</button>
+  <button class="filter-button" data-filter="notes">Notes</button>
+</div> -->
+
 <div class="container-posts">
-    {% for post in site.posts %}
-      {% if post.layout == "post" %}
-      <div class="posts-list-item post-item">
-        <span class="posts-list-item-name float-left">
-          <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>
-        </span>
-        <span class="posts-list-item-date float-right">
-          {{ post.date | date: '%Y-%m-%d' }}
-        </span>
-      </div>
-      {% endif %}
-    {% endfor %}
-    {% if paginator.total_pages > 1 %}
-    <div class="list-pagination">
-      {% if paginator.previous_page %}
-      <a href="{{ paginator.previous_page_path }}" class="float-left">
-        {{ site.data.lang[site.language].paginator_previous }}
-      </a>
-      {% endif %}
-      <span class="page_number">
-        {{ site.data.lang[site.language].paginator_pages }}{{ paginator.page }} / {{ paginator.total_pages }}
+  {% assign counter = 1 %}
+  {% for post in site.posts %}
+    {% if post.layout == "post" %}
+    <div class="posts-list-item post-item">
+      <span class="posts-list-item-number">
+        {{ counter }}.
       </span>
-      {% if paginator.next_page %}
-      <a href="{{ paginator.next_page_path }}" class="float-right">
-        {{ site.data.lang[site.language].paginator_next }}
-      </a>
-      {% endif %}
+      <span class="posts-list-item-name">
+        <strong>
+          <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>
+        </strong>
+      </span>
+      <span class="posts-list-item-date float-right">
+        {{ post.date | date: '%Y-%m-%d' }}
+      </span>
     </div>
     {% endif %}
+   {% assign counter = counter | plus: 1 %}
+  {% endfor %}
+
+  {% if paginator.total_pages > 1 %}
+  <div class="list-pagination">
+    {% if paginator.previous_page %}
+    <a href="{{ paginator.previous_page_path }}" class="float-left">
+      {{ site.data.lang[site.language].paginator_previous }}
+    </a>
+    {% endif %}
+    <span class="page_number">
+      {{ site.data.lang[site.language].paginator_pages }}{{ paginator.page }} / {{ paginator.total_pages }}
+    </span>
+    {% if paginator.next_page %}
+    <a href="{{ paginator.next_page_path }}" class="float-right">
+      {{ site.data.lang[site.language].paginator_next }}
+    </a>
+    {% endif %}
   </div>
+  {% endif %}
+</div>
