--- a/_includes/posts_only.html
+++ b/_includes/posts_only.html
@@ -5,12 +5,11 @@
 </div> -->
 
 <div class="container-posts">
-  {% assign counter = 1 %}
   {% for post in site.posts %}
     {% if post.layout == "post" %}
     <div class="posts-list-item post-item">
       <span class="posts-list-item-number">
-        {{ counter }}.
+        {{ post.ind }}.
       </span>
       <span class="posts-list-item-name">
         <strong>
@@ -22,7 +21,6 @@
       </span>
     </div>
     {% endif %}
-   {% assign counter = counter | plus: 1 %}
   {% endfor %}
 
   {% if paginator.total_pages > 1 %}
