--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -49,7 +49,7 @@ h6 {
   line-height: normal;
   margin: 5px 0;
   text-indent: 0;
-  padding: 0;
+  padding-top: 20px;
   font-family: Courier New, Courier, monospace;
 }
 
@@ -106,6 +106,26 @@ a.reversefootnote {
   font-size: 0.9em;
   color: #555;
   text-wrap: wrap;
+}
+
+/* Style for the comment button */
+.comment-button {
+  background-color: #00000000;
+  color: black;
+  padding: 2px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.comment-button:hover {
+  color: #18679c;
+}
+
+#comments-section {
+  margin-top: 20px;
+  border-top: 2px solid #ccc;
+  padding-top: 20px;
 }
 
 .container-wrapper {
