--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,6 +14,7 @@ layout: default
   {% endif %}
   
   <div class="post-content">
+    {% include toc.html html=content %}
     {{ content }}
   </div>
 
