--- a/_includes/posts_only.html
+++ b/_includes/posts_only.html
@@ -5,11 +5,13 @@
 </div> -->
 
 <div class="container-posts">
+  {% assign total_posts = site.posts.size %}
+  {% assign counter = total_posts %}
   {% for post in site.posts %}
     {% if post.layout == "post" %}
     <div class="posts-list-item post-item">
       <span class="posts-list-item-number">
-        {{ post.ind }}.
+        {{ counter }}.
       </span>
       <span class="posts-list-item-name">
         <strong>
@@ -21,6 +23,7 @@
       </span>
     </div>
     {% endif %}
+    {% assign counter = counter | minus: 1 %}
   {% endfor %}
 
   {% if paginator.total_pages > 1 %}
