--- a/_sass/reset.scss
+++ b/_sass/reset.scss
@@ -15,7 +15,6 @@ body {
   padding: 0;
   overflow-x: hidden;
   font-family: Computer Modern, Courier New, Courier, monospace;
-
 }
 head{
 
@@ -55,12 +54,16 @@ h6 {
   line-height: normal;
   margin: 5px 0;
   text-indent: 0;
-  padding-top: 20px;
   font-family: Courier New, Courier, monospace;
 }
 
 h2 {
   font-size: 1.3em;
+  margin-top: 20px;
+}
+
+h3 {
+  margin-top: 15px;
 }
 
 hr {
