--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -105,3 +105,29 @@
   background-color: #fdfdfd; /* Subtle background for differentiation */
   border-left: 5px solid #ddd; /* Add a visual indicator on the left */
 }
+
+.toggle-link {
+  color: #000000;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.sliding-note {
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.5s ease-out;
+}
+
+.sliding-note-content {
+  padding: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  background-color: #f8f9fa;
+  border-left: 3px solid #007bff;
+  font-style: italic;
+  box-sizing: border-box; /* Ensures padding and borders are included in max-height */
+}
+
+.sliding-note p {
+  margin: 0;
+}
